--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "connect-servicebus",
   "description": "Express AMQP Session handler middleware.",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "homepage": "http://github.com/UsabilityDynamics/node-connect-servicebus",
   "repository": {
     "url": "git@github.com:UsabilityDynamics/node-connect-servicebus.git",
@@ -27,11 +27,10 @@
   },
   "dependencies": {
     "lodash": "~2.2.1",
-    "object-settings": "UsabilityDynamics/node-object-settings",
-    "object-emitter": "UsabilityDynamics/node-object-emitter",
+    "object-emitter": "git://github.com/UsabilityDynamics/node-object-emitter#0.1.0",
+    "object-settings": "git://github.com/UsabilityDynamics/node-object-settings#0.1.2",
     "debug": "~0.7.4",
     "generate-key": "0.0.6",
-    "deep-extend": "~0.2.6",
     "ws": "~0.4.31",
     "amqp": "~0.1.8"
   },
